--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "keywords": [],
   "description": "",
   "dependencies": {
+    "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "mongoose": "^8.9.3",
